--- a/_data/projects/fr.yml
+++ b/_data/projects/fr.yml
@@ -500,7 +500,7 @@ Bien que nous ne fassions qu'effleurer la complexité des facteurs qui influence
     - url: 'https://www.youtube.com/watch?app=desktop&v=ZYmpKyCrsOs'
       name: 'Containing multitude'
     - url: 'https://nicoladicroce.cargo.site/soninurb'
-      name: '<br><br>Site Internet de Nicole Di Croce'
+      name: 'Site Internet de Nicole Di Croce'
   publications:
     - url: 'https://cordis.europa.eu/project/id/881822'
       name: 'Sonic inquiry in urban research'
